fix: include reference to cache js file

--- a/src/MakaMek.Avalonia/MakaMek.Avalonia.Browser/wwwroot/index.html
+++ b/src/MakaMek.Avalonia/MakaMek.Avalonia.Browser/wwwroot/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./app.css" />
+    <!-- Load the cache storage JavaScript module for IndexedDB operations -->
+    <script type='module' src="./cacheStorage.js"></script>
 </head>
 
 <body style="margin: 0; overflow: hidden">
